# hipstr

./: .typos.toml  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  cackle.toml  codecov.yml  release.toml  rustfmt.toml
.config/: nextest.toml
.github/workflows/: analysis.yml  basic.yml  clippy.yml  coverage.yml  miri.yml  qa.yml
benches/: competition.rs  main.rs
src/: backend.rs  bytes.rs  common.rs  lib.rs  macros.rs  os_string.rs  path.rs  raw.rs  smart.rs  string.rs  tests.rs  vecs.rs
src/backend/: atomic.rs  rc.rs  tests.rs
src/bytes/: borsh.rs  bstr.rs  cmp.rs  convert.rs  raw.rs  serde.rs  tests.rs
src/bytes/borsh/: tests.rs
src/bytes/raw/: allocated.rs  borrowed.rs  inline.rs  tests.rs
src/bytes/raw/borrowed/: tests.rs
src/bytes/raw/inline/: tests.rs
src/bytes/serde/: tests.rs
src/common/: drain.rs  tests.rs  traits.rs
src/common/traits/: tests.rs
src/os_string/: cmp.rs  convert.rs  serde.rs  tests.rs
src/path/: cmp.rs  convert.rs  serde.rs  tests.rs
src/path/serde/: tests.rs
src/raw/: allocated.rs  borrowed.rs  inline.rs  static_.rs  tests.rs
src/raw/inline/: tests.rs
src/smart/: tests.rs
src/string/: borsh.rs  bstr.rs  cmp.rs  convert.rs  pattern.rs  serde.rs  tests.rs
src/string/borsh/: tests.rs
src/string/serde/: tests.rs
src/vecs/: fat.rs  hip.rs  inline.rs  smart.rs  smart_thin.rs  thin.rs
src/vecs/inline/: tests.rs
src/vecs/smart/: tests.rs
src/vecs/smart_thin/: tests.rs
src/vecs/thin/: tests.rs
string-comparison/: Cargo.toml  chart.gnu  data.csv
string-comparison/src/: main.rs
tests/: bad_backend.rs  basic.rs
tests/bad_backend/: align_req.rs  align_req.stderr  too_large.rs  too_large.stderr
