[package]
name = "hipstr"
version = "0.3.2"
authors = ["Polazarus <polazarus@users.noreply.github.com>"]
description = """Yet another string for Rust: zero-cost borrow and slicing,
    inline representation for small strings, (atomic) reference counting"""
repository = "https://github.com/polazarus/hipstr"
keywords = ["string", "refcount", "inline", "arc_str", "cow"]
categories = ["memory-management", "data-structures"]
license = "MIT OR Apache-2.0"
edition = "2021"
readme = "README.md"
rust-version = "1.65.0"

[features]
unstable = []
serde = ["dep:serde", "dep:serde_bytes"]

[dev-dependencies]
fastrand = "2.0.0"
serde_test = "1.0.176"
serde = { version = "1.0.69", features = ["derive"] }
serde_json = "1.0"

[dependencies]
serde = { version = "1.0.69", optional = true }
serde_bytes = { version = "0.11.5", optional = true }

[workspace]
members = ['string-comparison']
