[package]
name = "hipstr"
version = "0.5.1"
authors = ["Polazarus <polazarus@users.noreply.github.com>"]
description = """Yet another string for Rust: zero-cost borrow and slicing,
    inline representation for small strings, (atomic) reference counting"""
repository = "https://github.com/polazarus/hipstr"
keywords = ["string", "refcount", "inline", "arc_str", "cow"]
categories = ["memory-management", "data-structures"]
license = "MIT OR Apache-2.0"
edition = "2021"
readme = "README.md"
rust-version = "1.77.0"

[features]
default = ["std"]
std = ["serde/std"]
unstable = []
serde = ["dep:serde", "dep:serde_bytes"]
bstr = ["dep:bstr"]

[dev-dependencies]
fastrand = "2.0.0"
serde_test = "1.0.176"
serde = { version = "1.0.69", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

[dependencies]
bstr = { version = "1.9.1", optional = true, features = ["alloc"] }
serde = { version = "1.0.69", optional = true, default-features = false, features = [] }
serde_bytes = { version = "0.11.5", optional = true, default-features = false, features = [
    "alloc",
] }

[workspace]
members = ['string-comparison']

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }
