[package]
name = "hipstr"
version = "0.6.0"
authors = ["Polazarus <polazarus@users.noreply.github.com>"]
description = """Yet another string for Rust: zero-cost borrow and slicing,
    inline representation for small strings, (atomic) reference counting"""
repository = "https://github.com/polazarus/hipstr"
keywords = ["string", "refcount", "inline", "arc_str", "cow"]
categories = ["memory-management", "data-structures"]
license = "MIT OR Apache-2.0"
edition = "2021"
readme = "README.md"
rust-version = "1.81.0"

[package.metadata.docs.rs]
all-features = true

[features]
default = ["std"]
std = ["serde/std", "serde_bytes/std"]
unstable = []
serde = ["dep:serde", "dep:serde_bytes"]
bstr = ["dep:bstr"]

[dev-dependencies]
fastrand = "2.0.0"
serde_test = "1.0.176"
serde = { version = "1.0.100", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0.45", default-features = false, features = ["alloc"] }
divan = "0.1.15"

[dependencies]
sptr = "0.3.2"

[dependencies.bstr]
version = "1"
optional = true
default-features = false
features = ["alloc"]

[dependencies.serde]
version = "1.0.100"
optional = true
default-features = false
features = ["alloc"]

[dependencies.serde_bytes]
version = "0.11.3"
optional = true
default-features = false
features = ["alloc"]

[target.'cfg(loom)'.dependencies]
loom = "0.7"

[target.'cfg(not(loom))'.dev-dependencies]
arcstr = "1.2.0"
ecow = "0.2.3"
kstring = "2.0.2"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(coverage_nightly)',
    'cfg(docsrs)',
    'cfg(loom)',
] }

[[bench]]
name = "main"
harness = false
