[package]
name = "string-comparison"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arcstr = "1.1.5"
fast-str = { version = "1.0.0", features = ["stack"] }
faststr = "0.2.9"
flexstr = "0.9.2"
hipstr = { version = "0.3.0", path = ".." }
imstr = "0.2.0"
